# beat-audio-player

./: .gitignore  .gitmodules  README.md  beat-audio-player.spec  beat.in  meson.build  ru.slie.beat.json  ru.slie.beat.yml
data/: beat.gresource.xml  meson.build  mpris2.xml  ru.slie.beat.add.desktop.in  ru.slie.beat.appdata.xml.in  ru.slie.beat.desktop.in
data/ui/: footer.ui  header.ui  progress.ui  window.ui
po/: POTFILES  beat.pot  nl.po  ru.po
rpm/: beat-audio-player.spec
src/: application.py  meson.build  player.py  settings.py  window.py
src/components/: indicator.py  media_keys.py  player.py  queue.py  queue_manager.py  store.py
src/components/mpris2/: __init__.py  dbus.py  mpris2.py
src/utils/: art_info.py  track_info.py
src/widgets/: cell_renderers.py  footer.py  header.py  playlist.py  progress.py  spectrum.py  store.py
src/window/: __init__.py  main.py  tab.py
